--- a/tests/cocrys/cocrys.yml
+++ b/tests/cocrys/cocrys.yml
@@ -2,19 +2,24 @@ basename: 'cocrys'
 mols: ['Cc1ccccc1C(=O)O.smi', 'CC1=NC(=NC=C1)N.smi']
 nmols: [4, 4]
 spg: 14
-nstruc: 10
+
+nstruc: 200
 factor: 1.3
 tfactor: 1.5
+nxyz: [1, 1, 1]
+cluster_cutoff: 0.5
 
 gen_crys: True
-verbose: True
+charge_model: 'bcc'
 
 opt_crys: True
+use_cluster_input: True
 sim_method: 'xtb'
 kpts: [2, 2, 2]
-
 opt_maxsteps: 10
 opt_method: 'LBFGS'
 free_energy: False
 
 dftb_command: 'dftb+ > PREFIX.out'
+
+verbose: True
