--- a/tests/ethanol/ethanol.yml
+++ b/tests/ethanol/ethanol.yml
@@ -1,11 +1,11 @@
-basename: 'benzene'
-mols: ['c1ccccc1.smi']
+basename: 'ethanol'
+mols: ['OCC.smi']
 nmols: [4]
-spg: 14
+spg: 36
 
 nstruc: 200
-factor: 1.3
-tfactor: 1.5
+factor: 1.1
+tfactor: 1.1
 nxyz: [1, 1, 1]
 cluster_cutoff: 0.5
 
